Beaucoup de changement, test sur le langage à objet provoquant des erreurs trop compliqué à résoudre.

--- a/Page_projet_version004/index.html
+++ b/Page_projet_version004/index.html
@@ -17,7 +17,8 @@
 <body class="ui-widget-content" style="border:0;">
   <div id="divConnect">
     <button id="buttonConnect">Se connecter</button>
-    <button id="buttonArrow">></button><!--Flèche-->
+    <!--Flèche-->
+    <button id="buttonArrow">></button>
     <input class="inputConnect" placeholder="IP" type="text" id="IP">
     <input class="inputConnect" placeholder="Nom d'utilisateur" type="text" id="username">
     <input class="inputConnect" placeholder="Mot de passe" type="password" id="password">
@@ -57,6 +58,8 @@
 
   <!--Script-->
   <script src="js/MQTT.js"></script>
+  <script src="js/main.js"></script>
   <script src="js/pageConfig.js"></script>
+
 </body>
 </html>
