--- a/Page_projet_version005/index.html
+++ b/Page_projet_version005/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="plugins/farbtastic/farbtastic.css" type="text/css" />
 
   <!--Style sheet config-->
-  <link rel="stylesheet" href="css/sliderSheetConfig.css">
+  <link rel="stylesheet" href="css/pageSheet.css">
 </head>
 
 <body class="ui-widget-content" style="border:0;">
@@ -28,18 +28,27 @@
 
   <div id="colorSpace" title="Color option">
     <div id="redZone">
+      <p class="colorText">Red</p>
       <div id="redValue"></div>
       <div id="red"></div>
     </div>
 
     <div id="greenZone">
+      <p class="colorText">Green</p>
       <div id="greenValue"></div>
       <div id="green"></div>
     </div>
 
     <div id="blueZone">
+      <p class="colorText">Blue</p>
       <div id="blueValue"></div>
       <div id="blue"></div>
+    </div>
+
+    <div id="satZone">
+      <p class="colorText">Sat.</p>
+      <div id="satValue"></div>
+      <div id="sat"></div>
     </div>
 
     <div id="swatch" class="ui-widget-content ui-corner-all"></div>
