--- a/Page_projet_version005/index.html
+++ b/Page_projet_version005/index.html
@@ -27,28 +27,28 @@
 
 
   <div id="colorSpace" title="Color option">
-    <div id="redZone">
+    <div id="redZone" class="sliderZone">
       <p class="colorText">Red</p>
-      <div id="redValue"></div>
-      <div id="red"></div>
+      <div id="redValue" class="sliderValue"></div>
+      <div id="red" class="slider"></div>
     </div>
 
-    <div id="greenZone">
+    <div id="greenZone" class="sliderZone">
       <p class="colorText">Green</p>
-      <div id="greenValue"></div>
-      <div id="green"></div>
+      <div id="greenValue" class="sliderValue"></div>
+      <div id="green" class="slider"></div>
     </div>
 
-    <div id="blueZone">
+    <div id="blueZone" class="sliderZone">
       <p class="colorText">Blue</p>
-      <div id="blueValue"></div>
-      <div id="blue"></div>
+      <div id="blueValue" class="sliderValue"></div>
+      <div id="blue" class="slider"></div>
     </div>
 
-    <div id="satZone">
+    <div id="satZone" class="sliderZone">
       <p class="colorText">Sat.</p>
-      <div id="satValue"></div>
-      <div id="sat"></div>
+      <div id="satValue" class="sliderValue"></div>
+      <div id="sat" class="slider"></div>
     </div>
 
     <div id="swatch" class="ui-widget-content ui-corner-all"></div>
@@ -66,6 +66,7 @@
 
   <!--Script-->
   <script src="js/MQTT.js"></script>
+  <script src="js/sliderConfig.js"></script>
   <script src="js/pageConfig.js"></script>
 </body>
 </html>
