--- a/Page_projet_version006/index.html
+++ b/Page_projet_version006/index.html
@@ -25,14 +25,20 @@
 
   <h1 id="title">Light Console</h1>
 
+  <div id="controlSpace">
+    <div id="faderSpace">
+    </div>
 
-  <div id="colorSpace" title="Color option">
+    <div id="colorSpace" title="Color option">
 
-    <div id="swatch" class="ui-widget-content ui-corner-all"></div>
+      <div id="swatch" class="ui-widget-content ui-corner-all"></div>
 
-    <div id="colorPicker"></div>
+      <div class="space"></div>
+
+      <div id="colorPicker"></div>
+
+    </div>
   </div>
-
   <!--Script Libraries-->
   <script src="js/Libraries/jquery.js"></script>
   <script src="js/Libraries/jquery-ui.js"></script>
