Ajout d'un envoi de message (triggerValue) et effet néon

--- a/Page_projet_version006/index.html
+++ b/Page_projet_version006/index.html
@@ -23,7 +23,7 @@
     <input class="inputConnect" placeholder="Mot de passe" type="password" id="password">
   </div>
 
-  <h1 id="title">Light Console</h1>
+  <h1 id="title">LIGHT CONSOLE</h1>
 
   <div id="controlSpace">
     <div id="faderSpace">
