Essai mémoire config

--- a/Page_projet_version014/index.html
+++ b/Page_projet_version014/index.html
@@ -23,6 +23,15 @@
     <input class="inputConnect" placeholder="Mot de passe" type="password" id="password">
   </div>
 
+  <ul>
+    <li id="buttonConfig1" class="buttonConfig">Config 1</li>
+    <li id="buttonConfig2" class="buttonConfig">Config 2</li>
+    <li id="buttonConfig3" class="buttonConfig">Config 3</li>
+    <li id="buttonConfig4" class="buttonConfig">Config 4</li>
+    <li id="buttonConfig5" class="buttonConfig">Config 5</li>
+    <li id="buttonConfig6" class="buttonConfig">Config 6</li>
+  </ul>
+
   <h1 id="title">LIGHT CONSOLE</h1>
 
   <div id="controlSpace">
