Changement de couleur des config pour spécifier cell actuelle.

--- a/Page_projet_version014/index.html
+++ b/Page_projet_version014/index.html
@@ -30,6 +30,7 @@
     <li id="buttonConfig4" class="buttonConfig">Config 4</li>
     <li id="buttonConfig5" class="buttonConfig">Config 5</li>
     <li id="buttonConfig6" class="buttonConfig">Config 6</li>
+    <li id="buttonConfigReset" class="buttonConfig">Reset Config</li>
   </ul>
 
   <h1 id="title">LIGHT CONSOLE</h1>
